--- a/MyRental.Blazor/_Imports.razor
+++ b/MyRental.Blazor/_Imports.razor
@@ -1,10 +1,20 @@
 ﻿@using System.Net.Http
+@using AutoMapper
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using MyRental.Blazor
+@using MyRental.Blazor.Authentication
 @using MyRental.Blazor.Shared
+@using MyRental.Services.Areas.Ads.Dto
+@using MyRental.Services.Areas.Ads.Services
+@using MyRental.Services.Areas.Ads.Validators
+@using MyRental.Services.Areas.Users.Dto
+@using MyRental.Services.Areas.Users.Services
+@using MyRental.Services.Areas.Medias.Services
+@using MyRental.Services.Areas.Users.Validators
