--- a/MyRental.Blazor/Pages/User/Edit.razor
+++ b/MyRental.Blazor/Pages/User/Edit.razor
@@ -1,20 +1,21 @@
 ﻿@page "/user/edit/{Id:int}"
+
 @attribute [Authorize]
 
 @inject AuthenticationStateProvider AuthProvider
-@inject ProtectedSessionStorage SessionStorage
 @inject IJSRuntime Js
 @inject NavigationManager NavManager
+@inject IMapper Mapper
 @inject IUserService UserService
 
 <PageTitle>Edit data</PageTitle>
 
 <div class="text-primary text-center">
     <h1>Edit personal information</h1>
-    
+
     <br/>
     <br/>
-    
+
     @if (string.IsNullOrEmpty(_userInput.Role))
     {
         <p>
@@ -41,7 +42,7 @@
              </div>
              <br/>
              <br/>
-        
+
              <button class="btn btn-info auto-width"><a href="/user/account"><i class="bi bi-arrow-bar-left"></i></a></button>
              <button class="btn btn-primary auto-width" @onclick="UpdateAsync"><i class="bi bi-pencil-square"></i></button>
          </EditForm>}
@@ -53,32 +54,33 @@
     public int Id { get; set; }
 
     readonly UserDtoInput _userInput = new();
-    UserSession? _session;
-    
+
     protected override async Task OnInitializedAsync()
     {
-        var userSessionStorageResult = await SessionStorage.GetAsync<UserSession>("UserSession");
-        _session = userSessionStorageResult.Success ? userSessionStorageResult.Value : null;
+        var user = await UserService.GetByIdAsync(Id);
+        Mapper.Map(user, _userInput);
 
-        if (_session != null)
-        {
-            _userInput.UserName = _session.UserName;
-            _userInput.Email = _session.Email;
-            _userInput.PhoneNumber = _session.PhoneNumber;
-            _userInput.Role = _session.Role;
-        }
+        var myProvider = (MyAuthenticationStateProvider)AuthProvider;
+        var userSession = myProvider.GetUserSession();
+
+        _userInput.Role = userSession.Role;
     }
 
     private async Task UpdateAsync()
     {
         try
         {
-            var result = await new UserDtoInputValidator(UserService).ValidateAsync(_userInput);
+            var result = await new UserDtoInputValidator(UserService)
+                .ValidateAsync(_userInput);
+            
             if (!result.IsValid)
             {
-                var message = result.Errors.Aggregate("", (current, error) => current + error.ErrorMessage);
+                var message = result.Errors
+                    .Aggregate("", (current, error) => current + error.ErrorMessage);
+                
                 throw new Exception(message);
             }
+            
             await UserService.UpdateByIdAsync(Id, _userInput);
         }
         catch (Exception e)
@@ -86,18 +88,6 @@
             await Js.InvokeVoidAsync("alert", e.Message);
             return;
         }
-
-        var customProvider = (MyAuthenticationStateProvider)AuthProvider;
-        
-        if (_session != null) await customProvider.UpdateAuthenticationStateAsync(
-                new UserSession
-            {
-                Id = _session.Id,
-                UserName = _userInput.UserName,
-                Email = _userInput.Email,
-                PhoneNumber = _userInput.PhoneNumber,
-                Role = _session.Role
-            });
 
         NavManager.NavigateTo("/user/account");
     }
