--- a/MyRental.Blazor/Pages/Auth/Login.razor
+++ b/MyRental.Blazor/Pages/Auth/Login.razor
@@ -81,6 +81,7 @@
                 SecurityAlgorithms.HmacSha256)
             );
 
-        return new JwtSecurityTokenHandler().WriteToken(token);
+        return new JwtSecurityTokenHandler()
+            .WriteToken(token);
     }
 }
