--- a/MyRental.Blazor/_Imports.razor
+++ b/MyRental.Blazor/_Imports.razor
@@ -16,6 +16,8 @@
 @using MyRental.Services.Areas.Ads.Dto
 @using MyRental.Services.Areas.Ads.Validators
 @using MyRental.Services.Areas.Medias.Dto
+@using MyRental.Services.Areas.Notifications
+@using MyRental.Services.Areas.Notifications.Data
 @using MyRental.Services.Areas.Users
 @using MyRental.Services.Areas.Users.Dto
 @using MyRental.Services.Areas.Users.Validators
