feat - Added notification subscription logic to user side in MyRental.Blazor project in footer and register page.

--- a/MyRental.Blazor/Pages/Auth/Login.razor
+++ b/MyRental.Blazor/Pages/Auth/Login.razor
@@ -31,7 +31,7 @@
     <br/>
     <br/>
     
-    <p>Don`t have an account? <a href="/auth/sign-up">Sign up here</a></p>
+    <p>Don`t have an account? <a href="/auth/register">Register here</a></p>
 </div>
 
 @code
