--- a/MyRental.Blazor/Pages/Auth/Register.razor
+++ b/MyRental.Blazor/Pages/Auth/Register.razor
@@ -1,10 +1,11 @@
-﻿@page "/auth/sign-up"
+﻿@page "/auth/register"
 
 @inject IJSRuntime Js
-@inject IUserService UserService
 @inject NavigationManager NavigationManager
+@inject IUserService UserService
+@inject INotificationService NotificationService
 
-<PageTitle>Sign Up</PageTitle>
+<PageTitle>Register</PageTitle>
 
 <div class="text-center">
     <h1>Sign Up</h1>
@@ -37,6 +38,10 @@
                 <option value="Realtor">Realtor</option>
             </InputSelect>
         </div>
+        <div>
+            <label for="Subscribe">Subscribe to Newsletter</label>
+            <InputCheckbox class="form-check" id="Subscribe" @bind-Value="_isSubscribed"></InputCheckbox>
+        </div>
     </EditForm>
     <br/>
     <br/>
@@ -52,6 +57,7 @@
 @code
 {
     readonly UserDtoInput _userInput = new();
+    bool _isSubscribed;
     
     private async void SignUpAsync()
     {
@@ -64,6 +70,7 @@
                 throw new Exception(message);
             }
             await UserService.CreateAsync(_userInput);
+            if (_isSubscribed) await NotificationService.SubscribeToNotificationsAsync(_userInput.Email);
         }
         catch (Exception e)
         {
