fix - Created email validation while user subscribe to notifications.

--- a/MyRental.Blazor/Shared/MainLayout.razor
+++ b/MyRental.Blazor/Shared/MainLayout.razor
@@ -61,6 +61,11 @@
     {
         try
         {
+            var result = await new EmailValidator()
+                .ValidateAsync(_email);
+            
+            if (!result.IsValid) throw new Exception("Invalid email");
+            
             await NotificationService.SubscribeToNotificationsAsync(_email);
             await Js.InvokeVoidAsync("alert", "Successfully!");
         }
