--- a/MyRental.Blazor/_Imports.razor
+++ b/MyRental.Blazor/_Imports.razor
@@ -18,6 +18,7 @@
 @using MyRental.Services.Areas.Medias.Dto
 @using MyRental.Services.Areas.Notifications
 @using MyRental.Services.Areas.Notifications.Data
+@using MyRental.Services.Areas.Notifications.Validators
 @using MyRental.Services.Areas.Users
 @using MyRental.Services.Areas.Users.Dto
 @using MyRental.Services.Areas.Users.Validators
