fix - Removed unnecessary UserRoles; chore - Removed unnecessary code.

--- a/MyRental.Blazor/Pages/Admin/Admin.razor
+++ b/MyRental.Blazor/Pages/Admin/Admin.razor
@@ -1,5 +1,7 @@
 ﻿@page "/admin"
 
+@attribute [Authorize(Roles = "Admin")]
+
 @inject IJSRuntime Js
 @inject INotificationService NotificationService
 
