feat - Changed UI in MyRental.Blazor project.

--- a/MyRental.Blazor/Pages/Auth/Register.razor
+++ b/MyRental.Blazor/Pages/Auth/Register.razor
@@ -42,7 +42,7 @@
     <br/>
     <br/>
     
-    <p>Already have an account? <a href="/auth/login">Login here</a></p>
+    <p>Already have an account? <a class="link-info" href="/auth/login">Login here</a></p>
 </div>
 
 @code
