--- a/MyRental.Blazor/Pages/Ad/Create.razor
+++ b/MyRental.Blazor/Pages/Ad/Create.razor
@@ -27,9 +27,9 @@
                 <tbody>
                 <tr>
                     <td>
-                        <button class="btn btn-primary medium-size" @onclick="ShowPreviousMedia"><i class="bi bi-arrow-left-circle-fill"></i></button>
-                        <button class="btn btn-danger medium-size" @onclick="() => DeleteFile(_currentMedia)"><i class="bi bi-trash-fill"></i></button>
-                        <button class="btn btn-primary medium-size" @onclick="ShowNextMedia"><i class="bi bi-arrow-right-circle-fill"></i></button>
+                        <button class="btn btn-info" @onclick="ShowPreviousMedia"><i class="bi bi-arrow-left-circle-fill"></i></button>
+                        <button class="btn btn-danger" @onclick="() => DeleteFile(_currentMedia)"><i class="bi bi-trash-fill"></i></button>
+                        <button class="btn btn-info" @onclick="ShowNextMedia"><i class="bi bi-arrow-right-circle-fill"></i></button>
                     </td>
                 </tr>
                 </tbody>
