--- a/MyRental.Blazor/Pages/Ad/More.razor
+++ b/MyRental.Blazor/Pages/Ad/More.razor
@@ -22,15 +22,18 @@ else
                 </th>
             </tr>
             </thead>
+            
             <tbody>
             <tr>
                 <td>
-                    <button class="btn btn-primary medium-size" @onclick="ShowPreviousMedia"><i class="bi bi-arrow-left-circle-fill"></i></button>
-                    <button class="btn btn-primary medium-size" @onclick="ShowNextMedia"><i class="bi bi-arrow-right-circle-fill"></i></button>
+                    <button class="btn btn-info" @onclick="ShowPreviousMedia"><i class="bi bi-arrow-left-circle-fill"></i></button>
+                    <button class="btn btn-info" @onclick="ShowNextMedia"><i class="bi bi-arrow-right-circle-fill"></i></button>
                 </td>
             </tr>
             </tbody>
         </table>
+        <br/>
+        <br/>
     }
 
     <table class="table table-bordered table-striped">
