--- a/MyRental.Blazor/Pages/Auth/Login.razor
+++ b/MyRental.Blazor/Pages/Auth/Login.razor
@@ -31,7 +31,7 @@
     <br/>
     <br/>
     
-    <p>Don`t have an account? <a href="/auth/register">Register here</a></p>
+    <p>Don`t have an account? <a class="link-info" href="/auth/register">Register here</a></p>
 </div>
 
 @code
