--- a/MyRental.Blazor/wwwroot/css/styles.css
+++ b/MyRental.Blazor/wwwroot/css/styles.css
@@ -103,7 +103,7 @@ html, body {
     line-height: var(--bs-body-line-height);
     color: var(--bs-body-color);
     text-align: var(--bs-body-text-align);
-    background-color: var(--bs-body-bg);
+    background-color: gray;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -121,7 +121,6 @@ main{
 footer{
     margin-top: 30px;
     flex: 0 0 auto;
-    background: #006375;
 }
 
 hr {
@@ -133,6 +132,9 @@ hr {
 }
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
+    color: #ffffff;
+    text-transform: uppercase;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     margin-top: 0;
     margin-bottom: 0.5rem;
@@ -185,6 +187,7 @@ h6, .h6 {
 }
 
 p {
+    color: white;
     margin-top: 0;
     margin-bottom: 1rem;
 }
@@ -343,6 +346,7 @@ caption {
 }
 
 th {
+    color: white;
     text-align: inherit;
     text-align: -webkit-match-parent;
 }
@@ -354,14 +358,15 @@ tr,
 td,
 th {
     width: auto;
-    border-color: inherit;
+    color: white;
+    border-color: black;
     border-style: solid;
     border-width: 0;
 }
 
 label {
     --bs-text-opacity: 1;
-    color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
+    color: yellow !important;
     margin-top: 10px;
     margin-bottom: 10px;
     display: block;
@@ -1850,7 +1855,6 @@ progress {
 
 .table-striped > tbody > tr:nth-of-type(odd) > * {
     --bs-table-accent-bg: var(--bs-table-striped-bg);
-    color: var(--bs-table-striped-color);
 }
 
 .table-striped-columns > :not(caption) > tr > :nth-child(even) {
@@ -2056,7 +2060,7 @@ progress {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #073642;
+    color: #0c0c0c;
     background-color: #a9bdbd;
     background-clip: padding-box;
     border: 1px solid rgba(0, 0, 0, 0.15);
@@ -2190,6 +2194,15 @@ progress {
     font-size: 1.25rem;
     border-radius: 0.5rem;
 }
+
+.hidden{
+    display: none;
+}
+
+.show{
+    display: contents;
+}
+
 .form-control-lg::-webkit-file-upload-button {
     padding: 0.5rem 1rem;
     margin: -0.5rem -1rem;
@@ -2275,7 +2288,7 @@ textarea.form-control-lg {
     background-image: none;
 }
 .form-select:disabled {
-    background-color: #eee8d5;
+    background-color: #676767;
 }
 .form-select:-moz-focusring {
     color: transparent;
@@ -6827,7 +6840,7 @@ header {
 }
 
 .link-info {
-    color: #268bd2 !important;
+    color: #0936ee !important;
 }
 .link-info:hover, .link-info:focus {
     color: #1e6fa8 !important;
@@ -8173,7 +8186,7 @@ header {
 /* rtl:end:remove */
 .text-primary {
     --bs-text-opacity: 1;
-    color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
+    color: #dcff00 !important;
 }
 
 .text-secondary {
