--- a/MyRental.Blazor/Pages/Ad/Edit.razor
+++ b/MyRental.Blazor/Pages/Ad/Edit.razor
@@ -148,7 +148,7 @@
         <br/>
         
         <div class="text-center">
-            <button class="btn btn-info auto-width"><a href="/user/account"><i class="bi bi-arrow-bar-left"></i></a></button>
+            <a href="/user/account"><button class="btn btn-info auto-width"><i class="bi bi-arrow-bar-left"></i></button></a>
             <button class="btn btn-primary auto-width" @onclick="UpdateAsync"><i class="bi bi-pencil-square"></i></button>
         </div>
     </div>
