--- a/MyRental.Blazor/Pages/Ad/More.razor
+++ b/MyRental.Blazor/Pages/Ad/More.razor
@@ -67,7 +67,7 @@ else
     <br/>
     <br/>
     
-    <button class="btn btn-info auto-width"><a href="/ads"><i class="bi bi-arrow-bar-left"></i></a></button>
+    <a href="/ads"><button class="btn btn-info auto-width"><i class="bi bi-arrow-bar-left"></i></button></a>
 }
 
 
