--- a/MyRental.Blazor/Pages/Auth/Login.razor
+++ b/MyRental.Blazor/Pages/Auth/Login.razor
@@ -26,7 +26,7 @@
     <br/>
     <br/>
     
-    <button class="btn btn-info auto-width"><a href="/"><i class="bi bi-arrow-bar-left"></i></a></button>
+    <a href="/"><button class="btn btn-info auto-width"><i class="bi bi-arrow-bar-left"></i></button></a>
     <button class="btn btn-success auto-width" @onclick="LoginAsync"><i class="bi bi-check-square"></i></button>
     <br/>
     <br/>
