--- a/MyRental.Blazor/Pages/Ad/Create.razor
+++ b/MyRental.Blazor/Pages/Ad/Create.razor
@@ -141,7 +141,7 @@
         <br/>
         
         <div class="text-center">
-            <button class="btn btn-info auto-width"><a href="/user/account"><i class="bi bi-arrow-bar-left"></i></a></button>
+            <a href="/user/account"><button class="btn btn-info auto-width"><i class="bi bi-arrow-bar-left"></i></button></a>
             <button class="btn btn-success auto-width" @onclick="CreateAsync"><i class="bi bi-check-square"></i></button>
         </div>
     </div>
