--- a/MyRental.Blazor/Pages/User/Edit.razor
+++ b/MyRental.Blazor/Pages/User/Edit.razor
@@ -42,7 +42,7 @@
              <br/>
              <br/>
 
-             <button class="btn btn-info auto-width"><a href="/user/account"><i class="bi bi-arrow-bar-left"></i></a></button>
+             <a href="/user/account"><button class="btn btn-info auto-width"><i class="bi bi-arrow-bar-left"></i></button></a>
              <button class="btn btn-primary auto-width" @onclick="UpdateAsync"><i class="bi bi-pencil-square"></i></button>
          </EditForm>}
 </div>
