fix - Fixed mailing system (send blind carbon copy); feature - Notify user of subscribing to notifications and successfully registration; feature - Added unsubscribe from notifications logic; feature - Added input email validation;

--- a/MyRental.Blazor/Pages/Auth/Register.razor
+++ b/MyRental.Blazor/Pages/Auth/Register.razor
@@ -54,7 +54,9 @@
     {
         try
         {
-            var result = await new UserDtoInputValidator(UserService).ValidateAsync(_userInput);
+            var result = await new UserDtoInputValidator(UserService)
+                .ValidateAsync(_userInput);
+            
             if (!result.IsValid)
             {
                 var message = result.Errors
@@ -64,7 +66,17 @@
             }
             
             await UserService.CreateAsync(_userInput);
-            if (_isSubscribed) await NotificationService.SubscribeToNotificationsAsync(_userInput.Email);
+
+            if (_isSubscribed)
+            {
+                try
+                {
+                    await NotificationService.SubscribeToNotificationsAsync(_userInput.Email);
+                }
+                catch {}
+            }
+            
+            await NotificationService.NotifyOfRegisterAsync(_userInput.Email);
         }
         catch (Exception e)
         {
